--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.13",
     "@heroicons/react": "^2.0.16",
+    "@prisma/client": "^4.11.0",
     "@tailwindcss/container-queries": "^0.1.0",
     "formik": "^2.2.9",
     "next": "^13.1.6",
@@ -35,6 +36,7 @@
     "jest-environment-jsdom": "^29.4.3",
     "postcss": "^8.4.21",
     "prettier": "^2.8.4",
+    "prisma": "^4.11.0",
     "tailwindcss": "^3.2.7",
     "ts-jest": "^29.0.5",
     "typescript": "^4.9.5"
