--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "@heroicons/react": "^2.0.16",
     "@prisma/client": "^4.11.0",
     "@tailwindcss/container-queries": "^0.1.0",
+    "@tiptap/pm": "^2.0.0-beta.220",
+    "@tiptap/react": "^2.0.0-beta.220",
+    "@tiptap/starter-kit": "^2.0.0-beta.220",
     "formik": "^2.2.9",
     "next": "^13.1.6",
     "react": "^18.2.0",
