--- a/package.json
+++ b/package.json
@@ -10,42 +10,41 @@
   "author": "anton palermo <anpalermo@outlook.com>",
   "license": "MIT",
   "dependencies": {
-    "@headlessui/react": "^1.7.13",
-    "@heroicons/react": "^2.0.16",
+    "@headlessui/react": "^1.7.18",
+    "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.8.1",
-    "@tailwindcss/container-queries": "^0.1.0",
-    "@tiptap/extension-document": "^2.0.1",
-    "@tiptap/extension-placeholder": "^2.0.1",
-    "@tiptap/pm": "^2.0.0-beta.220",
-    "@tiptap/react": "^2.0.0-beta.220",
-    "@tiptap/starter-kit": "^2.0.0-beta.220",
-    "formik": "^2.2.9",
-    "next": "^14.0.4",
+    "@tailwindcss/container-queries": "^0.1.1",
+    "@tiptap/extension-document": "^2.1.16",
+    "@tiptap/extension-placeholder": "^2.1.16",
+    "@tiptap/pm": "^2.1.16",
+    "@tiptap/react": "^2.1.16",
+    "@tiptap/starter-kit": "^2.1.16",
+    "formik": "^2.4.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-use": "^17.4.0",
-    "swr": "^2.1.0"
+    "react-use": "^17.4.3",
+    "swr": "^2.2.4"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.3",
-    "@tailwindcss/line-clamp": "^0.4.2",
-    "@tailwindcss/typography": "^0.5.9",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.10",
     "@testing-library/jest-dom": "^6.2.0",
-    "@testing-library/react": "^14.0.0",
+    "@testing-library/react": "^14.1.2",
     "@types/node": "^20.11.5",
-    "@types/react": "^18.0.28",
-    "@types/react-dom": "^18.0.11",
-    "autoprefixer": "^10.4.13",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.56.0",
-    "eslint-config-next": "14.0.4",
-    "jest": "^29.4.3",
-    "jest-environment-jsdom": "^29.4.3",
-    "postcss": "^8.4.21",
+    "eslint-config-next": "14.1.0",
+    "jest": "^29.7.0",
+    "jest-environment-jsdom": "^29.7.0",
+    "next": "^14.1.0",
+    "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "prisma": "^5.8.1",
-    "tailwindcss": "^3.2.7",
-    "ts-jest": "^29.0.5",
+    "tailwindcss": "^3.4.1",
+    "ts-jest": "^29.1.1",
     "typescript": "^5.3.3"
   }
 }
