--- a/package.json
+++ b/package.json
@@ -13,20 +13,19 @@
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.8.1",
-    "@tailwindcss/container-queries": "^0.1.1",
     "@tiptap/extension-document": "^2.1.16",
     "@tiptap/extension-placeholder": "^2.1.16",
     "@tiptap/pm": "^2.1.16",
     "@tiptap/react": "^2.1.16",
     "@tiptap/starter-kit": "^2.1.16",
-    "formik": "^2.4.5",
+    "next": "^14.1.0",
+    "next-auth": "^4.24.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-use": "^17.4.3",
-    "swr": "^2.2.4"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@tailwindcss/aspect-ratio": "^0.4.2",
+    "@tailwindcss/container-queries": "^0.1.1",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "@testing-library/jest-dom": "^6.2.0",
@@ -39,7 +38,6 @@
     "eslint-config-next": "14.1.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "next": "^14.1.0",
     "postcss": "^8.4.33",
     "prettier": "^3.2.4",
     "prisma": "^5.8.1",
