--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "anton palermo <anpalermo@outlook.com>",
   "license": "MIT",
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.16",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
     "@prisma/client": "^5.8.1",
