--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
   "author": "anton palermo <anpalermo@outlook.com>",
   "license": "MIT",
   "dependencies": {
-    "@auth/prisma-adapter": "^1.0.16",
     "@headlessui/react": "^1.7.18",
     "@heroicons/react": "^2.1.1",
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-slot": "^1.0.2",
     "@tiptap/extension-document": "^2.1.16",
