--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
     "@tiptap/extension-document": "^2.1.16",
     "@tiptap/extension-placeholder": "^2.1.16",
     "@tiptap/pm": "^2.1.16",
